--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,133 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+*{
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
+:root{
+  --cor-verde: #009933;
+  --cor-cinza: #545454;
+  --cor-azul-Padrao: #4A90E2;
+}
+body{
+  width: 100%;
   min-height: 100vh;
+  overflow-x: hidden;
+}
+.body{
+  width: 100%;
+  height: 100vh;
+  overflow-x: hidden;
+}
+main{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+#general{
+  width: 800px;
+  border-radius: 40px;
+}
+#step{
+  width: 60px;
+  height: 60px;
+}
+.steps hr{
+  width: 90px;
+  border: 0.1em solid blue;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.steps .hr{
+  width: 90px;
+  border: 0.09em solid var(--cor-verde);
+}
+.step1{
+  width: 60px;
+  height: 60px;
+  background-color: var(--cor-verde);
+}
+.step1 svg{
+  width: 30px;
+  height: 30px;
+}
+#inputs{
+  height: 50px;
+  padding: 0 15px;
+  border: none;
+  outline: none;
+  border-radius: 25px;
+  background-color: #ECECEC;
+}
+#transaction{
+  width: 90%;
+  height: 50px;
+  padding: 0 15px;
+  border: none;
+  outline: none;
+  border-radius: 25px;
+  background-color: #ECECEC;
+}
+::placeholder{
+  color: var(--cor-cinza);
+}
+#buttons button{
+  width: 45%;
+  height: 45px;
+  padding: 0 15px;
+  border-radius: 25px;
+  border: none;
+  outline: none;
+}
+#buttons button svg{
+  width: 30px;
+  height: 30px;
+  color: white;
+}
+#buttons{
+  width: 70%;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+#registration{
+  width: 95%;
 }
-button:hover {
-  border-color: #646cff;
+#institute, #course{
+  height: 50px;
+  padding: 0 15px;
+  border: none;
+  outline: none;
+  border-radius: 25px;
+  background-color: #ECECEC;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+:first-child{
+  color: #545454;
+  font-weight: 600;
 }
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+#course:first-child{
+  color: #545454;
+  font-weight: 600; 
+}
+img{
+  width: 60px;
+  height: 60px;
+}
+@media (max-width: 575px){
+  #buttons{
+      width: 100%;
   }
-  a:hover {
-    color: #747bff;
+}
+@media (max-width: 400px){
+  .steps hr{
+      width: 60px;
   }
-  button {
-    background-color: #f9f9f9;
+  #buttons button{
+      width: 60%;
+      font-size: 12pt;
+  }
+  #buttons button svg{
+      width: 20px;
+      height: 20px;
   }
 }
