--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,12 @@
 }
 body{
   width: 100%;
-  min-height: 100vh;
+  min-height: 100dvh;
   overflow-x: hidden;
 }
 .body{
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   overflow-x: hidden;
 }
 main{
